add angular as external lib

--- a/helloangular/index.html
+++ b/helloangular/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html ng-app="app">
+<html data-ng-app="app">
 
 <head>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="app.css">
+    <script src="../external-libraries/angular.min.js"></script>
     <script src="app.js"></script>
+
 </head>
 
 <body>
-<div ng-controller="theController">
-    <p>{{greeting.text}}</p>
+<div data-ng-controller="theController">
+    <p><label id="lbl">{{greeting.text}}</label></p>
+    <p><button id="btn" data-ng-click="handleClick()">Click Me</button></p>
 </div>
 </body>
 </html>
