single page app example added

--- a/helloangular/index.html
+++ b/helloangular/index.html
@@ -8,8 +8,8 @@
 
 </head>
 
-<body>
-<div data-ng-controller="theController">
+<body  data-ng-controller="theController">
+<div>
     <p><label id="lbl">{{greeting.text}}</label></p>
     <p><button id="btn" data-ng-click="handleClick()">Click Me</button></p>
 </div>
